[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["mvp <mvpetri@gmail.com>"]
readme = "README.md"
packages = [{include = "notas_musicais"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
isort = "^5.12.0"
taskipy = "^1.12.0"
black = "^23.7.0"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.21"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff ."
lintfix = "black . && isort ."
docs = "mkdocs serve"
# pre_test = "task lintfix"
test = "pytest -s -x --cov=notas_musicais -vv"
post_test = "coverage html"